# voiceprompt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: voiceprompt.rb
integrations/claude-code/: README.md  SKILL.md  install.sh
legacy/swift-macos/: Package.swift
legacy/swift-macos/Sources/voiceprompt/: AppFocusTracker.swift  AudioRecorder.swift  Config.swift  HotkeyManager.swift  Notifier.swift  Pasteboard.swift  PromptReformulator.swift  StatusBarController.swift  Transcriber.swift  main.swift
legacy/swift-macos/scripts/: install.sh  uninstall.sh
plugin/claude-code/: README.md
plugin/claude-code/.claude-plugin/: plugin.json
plugin/claude-code/skills/voiceprompt/: SKILL.md
src/voiceprompt/: __init__.py  __main__.py  cli.py  config.py  gemini.py  github_models.py  history.py  hotkey.py  inject.py  menu.py  menubar.py  ollama.py  proctitle.py  recorder.py  reformulator.py  select.py  styles.py  transcriber.py  viz.py
src/voiceprompt/audio/: recorder.py  transcriber.py
src/voiceprompt/providers/: claude.py  gemini.py  github_models.py  ollama.py
src/voiceprompt/system/: clipboard.py  hotkey.py  inject.py  proctitle.py
src/voiceprompt/ui/: menu.py  viz.py
tests/: test_config.py  test_github_models.py  test_menu.py  test_recorder.py  test_reformulator.py
