[project]
name = "voiceprompt-cli"
version = "0.2.0"
description = "Speak. Claude refines. Paste: record, refine, and copy prompts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Noel Caravaca", email = "noel@noelcaravaca.com" }]
keywords = ["voice", "claude", "anthropic", "whisper", "cli", "prompt", "claude-code", "dictation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "questionary>=2.0",
    "sounddevice>=0.4.7",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    "anthropic>=0.39",
    "ollama>=0.4",
    "google-genai>=1.0",
    "parakeet-mlx>=0.3",
    "huggingface-hub>=0.24",
    "hf-transfer>=0.1.6",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "platformdirs>=4.0",
    "setproctitle>=1.3",
]

[project.urls]
Homepage = "https://github.com/noelcaravaca/voiceprompt-cli"
Repository = "https://github.com/noelcaravaca/voiceprompt-cli"
Issues = "https://github.com/noelcaravaca/voiceprompt-cli/issues"

[project.scripts]
voiceprompt = "voiceprompt.cli:app"

[dependency-groups]
dev = [
    "pyinstaller>=6.5",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceprompt"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
