[project]
name = "voiceprompt-cli"
version = "0.3.0"
description = "Speak. AI refines. Paste. Voice-to-prompt CLI: local Whisper STT, Claude/Ollama/Gemini refinement, global hotkey paste."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Noel Caravaca", email = "noel@noelcaravaca.com" }]
keywords = [
    "voice", "dictation", "voice-prompt", "speech-to-text", "stt",
    "claude", "anthropic", "ollama", "gemini",
    "whisper", "faster-whisper", "cross-platform",
    "claude-code", "cli", "prompt-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "questionary>=2.0",
    "sounddevice>=0.4.7",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    "anthropic>=0.39",
    "ollama>=0.4",
    "google-genai>=1.0",
    # Cross-platform local STT: works on macOS (Intel + ARM), Linux, Windows.
    # CPU by default (int8); auto-uses CUDA float16 when an NVIDIA GPU is present.
    "faster-whisper>=1.0",
    "av>=11,<14",  # av 14+ removed av.audio breaking faster-whisper
    "huggingface-hub>=0.24",
    "hf-transfer>=0.1.6",
    "mlx-whisper>=0.4.0; sys_platform == 'darwin'",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "platformdirs>=4.0",
    "setproctitle>=1.3",
]

[project.urls]
Homepage = "https://github.com/noelcaravaca/voiceprompt-cli"
Repository = "https://github.com/noelcaravaca/voiceprompt-cli"
Issues = "https://github.com/noelcaravaca/voiceprompt-cli/issues"
Changelog = "https://github.com/noelcaravaca/voiceprompt-cli/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
menubar = [
    "rumps>=0.4.0",
]

[project.scripts]
voiceprompt = "voiceprompt.cli:app"
voiceprompt-menubar = "voiceprompt.menubar:run"

[dependency-groups]
dev = [
    "pyinstaller>=6.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceprompt"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["src/voiceprompt"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
# Gradual mode: not strict yet. Tighten module-by-module.
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
# Provider modules expose fully typed public APIs first.
module = ["voiceprompt.reformulator", "voiceprompt.config"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
